--- a/src/main/webapp/WEB-INF/templates/template_default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template_default.xhtml
@@ -22,6 +22,7 @@
             <div id="left">
                 <ui:insert name="left">
                     <ui:include src="menu.xhtml"/>
+                    <h:messages globalOnly="true" infoStyle="color: green;" errorStyle="color: red;"/>
                 </ui:insert>
             </div>
             <div id="content">
